<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--  TITLES / DESCRIPTIONS -->
    <string name="app_name">Bitcoin Monitor</string>
    <string name="app_desc">An awesome bitcoin monitor it is!</string>

    <!-- Monitor (Settings Activity) -->
    <string name="monitor_btc_label">Bitcoin Exchange Rate</string>
    <string name="monitor_ltc_label">Litecoin Exchange Rate</string>
    <string name="monitor_desc">See current exchange rate in selected currency.</string>

    <!-- Arbitrage (Settings Activity) -->
    <string name="arbitrage_btc_label">Bitcoin Arbitrage</string>
    <string name="arbitrage_desc">See difference between prices from chosen exchanges.</string>

    <!-- Notifications (Settings Activity) -->
    <string name="notifications_label">Notifications</string>


<!-- MONITOR PREFERENCE SCREENS -->


    <!-- SOURCE -->
    <!-- btc -->
    <string name="source_title_btc">Bitcoin Exchange</string>
    <string name="source_summary_btc">Change exchange rate source</string>

    <!-- ltc -->
    <string name="source_title_ltc">Litecoin Exchange</string>
    <string name="source_summary_ltc">Currently only BTC-e is supported</string>


    <!-- CURRENCY -->
    <string name="currency_title">Currency</string>
    <string name="currency_summary_not_supported">Custom currencies are not supported with currently chosen Exchange</string>
    <string name="currency_summary_active">Currency to be displayed</string>


    <!-- AMOUNT -->
    <!-- btc-->
    <string name="amount_title_btc">Custom BTC amount</string>
    <string name="amount_summary_btc">Alter BTC amount of displayed value</string>

    <!-- ltc -->
    <string name="amount_title_ltc">Custom LTC amount</string>
    <string name="amount_summary_ltc">Alter LTC amount of displayed value</string>

    <!-- NOTIFICATIONS -->
    <!-- below -->
    <string name="notif_price_below_title_off">Price drops below…</string>
    <string name="notif_price_below_title_on">Price drops below %1$s%2$s</string>
    <string name="notif_price_below_summary">Get notification when price plunges</string>

    <!-- below -->
    <string name="notif_price_above_title_off">Price rises above…</string>
    <string name="notif_price_above_title_on">Price rises above %1$s%2$s</string>
    <string name="notif_price_above_summary">Get notification when price skyrockets</string>


    <!-- EXPERIMENTAL -->
    <string name="experimental_title">Experimental mode</string>
    <string name="experimental_summary">[WARNING] Saves data and battery, but may misbehave</string>


<!-- ARBITRAGE PREFERENCE SCREENS -->

    <!-- CATEGORIES -->
    <string name="cat_buy_source">Buy Source</string>
    <string name="cat_sell_source">Sell Source</string>
    <string name="cat_other">Other</string>
    <string name="cat_notifications">Notifications</string>
    <string name="cat_donate">Donations</string>


    <!-- EXCHANGES -->
    <string name="exchange_title">Exchange</string>
    <string name="exchange_buy_summary">Buying point for your coins</string>
    <string name="exchange_sell_summary">Selling point for your coins</string>


    <!-- PRICE TYPE -->
    <string name="used_price_title">Used price</string>
    <string name="used_price_summary">Price used in calculations</string>
    <string name="used_price_switch_last">Last</string>
    <string name="used_price_switch_buy">Sell</string>
    <string name="used_price_switch_sell">Buy</string>


    <!-- PRIORITY -->
    <string name="priority_title">Difference priority</string>
    <string name="priority_summary">What is more important</string>
    <string name="priority_switch_on">"  %  "</string>
    <string name="priority_switch_off">"  $  "</string>


    <!-- ORDER BOOK -->
    <string name="order_book_title">Order Book</string>
    <string name="order_book_summary">Analyze Order Book for difference calculations</string>


    <!-- ORDER BOOK AMOUNT -->
    <string name="order_book_amount_title">Order Book Amount</string>
    <string name="order_book_amount_summary">Required to properly calculate Order Book price</string>


    <!-- ORDER BOOK CONFIRMATION DIALOG -->
    <string name="order_book_confirmation_title">Data usage warning!</string>
    <string name="order_book_confirmation_msg">Enabling Order Book may use significantly more data</string>


    <!-- NOTIFICATIONS -->
    <!-- below -->
    <string name="notif_diff_below_title">Prices get closer</string>
    <string name="notif_diff_below_summary">Get notification when difference shrinks to %1$s%2$s</string>

    <string name="notif_diff_above_title">Prices grow apart</string>
    <string name="notif_diff_above_summary">Get notification when difference widens to %1$s%2$s</string>



    <string name="notif_diff_below_title_off">Difference narrows below…</string>
    <string name="notif_diff_below_title_on">Difference narrows below %1$s%2$s</string>
    <string name="notif_diff_below_check_label">Difference goes below %s%%</string>

    <!-- below -->
    <string name="notif_diff_above_title_off">Difference widens above…</string>
    <string name="notif_diff_above_title_on">Difference widens above %1$s%2$s</string>
    <string name="notif_diff_above_check_label">Difference goes above %s%%</string>



<!-- NOTIFICATION PREFERENCE SCREEN -->
    <!-- nothing here yet -->



<!-- COMMONS ON PREFERENCE SCREENS -->

    <!-- NOTIFICATIONS -->
    <string name="notifications_title">Advanced</string>
    <string name="notifications_summary">Set more specific and complex notifications</string>
    <string name="notif_enabled">Notification is set up. Set value to 0 to disable</string>


    <!-- DONATE -->
    <string name="donate_title">Donate (5mBTC)</string>
    <string name="donate_title_ltc">Donate (0.2LTC)</string>
    <string name="donate_summary">If you like my work, please consider donating</string>


<!-- WIDGETS DISPLAY -->
    <string name="expanded_body_monitor">Current value of %1$s%2$s on %3$s</string>
    <string name="expanded_body_arbitrage">%1$s|%2$s: %3$s\n%4$s|%5$s: %6$s</string>



<!-- ERRORS -->
    <string name="error_invalid_amount">Changes NOT saved, invalid value provided.</string>
    <string name="warn_no_wallet_btc">No Bitcoin wallet installed. Try that one!</string>
    <string name="warn_no_wallet_ltc">No Litecoin wallet installed. Try that one!</string>

</resources>
