<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <ListPreference android:key="source"
        android:title="@string/source_title_btc"
        android:summary="@string/source_summary_btc"
        android:entries="@array/source_list"
        android:entryValues="@array/source_values"
        android:defaultValue="0" />
    
    <ListPreference android:key="currency"
        android:title="@string/currency_title"
        android:summary="@string/currency_summary_active"
        android:entries="@array/currencies_btc_mtgox_list"
        android:entryValues="@array/currencies_btc_mtgox_values"
        android:defaultValue="USD" />

    <EditTextPreference android:key="amount"
        android:title="@string/amount_title_btc"
        android:summary="@string/amount_summary_btc"
		android:inputType="numberDecimal"
		android:defaultValue="1.0" />
     
    <!--<CheckBoxPreference android:key="experimental"-->
        <!--android:title="@string/experimental_title"-->
        <!--android:summary="@string/experimental_summary"-->
        <!--android:enabled="false"-->
        <!--android:defaultValue="0" />-->
    
    <Preference android:key="donate"
        android:title="@string/donate_title"
        android:summary="@string/donate_summary" />

    <Preference android:key="donateLTC"
        android:title="@string/donate_title_ltc"
        android:summary="@string/donate_summary" />

</PreferenceScreen>