<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >


    <!-- TEMP -->
    <!-- Those strings are not in strings.xml on purpose. -->
    <Preference android:key="notice"
        android:title="Altcoins will soon be paid!"
        android:summary="Tap here to get Premium for free (offer valid until next version is published)"
        android:icon="@drawable/ic_notice"
        android:persistent="false" />
    <!-- /TEMP -->

    
    <ListPreference android:key="source"
        android:title="@string/source_title_btc"
        android:summary="@string/source_summary_btc"
        android:entries="@array/source_list"
        android:entryValues="@array/source_values"
        android:defaultValue="0" />
    
    <ListPreference android:key="currency"
        android:title="@string/currency_title"
        android:summary="@string/currency_summary_active"
        android:entries="@array/currencies_btc_mtgox_list"
        android:entryValues="@array/currencies_btc_mtgox_values"
        android:defaultValue="0" />

    <EditTextPreference android:key="amount"
        android:title="@string/amount_title_btc"
        android:summary="@string/amount_summary_btc"
		android:inputType="numberDecimal"
		android:defaultValue="1.0" />

    <Preference
        android:title="Notifications">

    </Preference>
     
    <!--<CheckBoxPreference android:key="experimental"-->
        <!--android:title="@string/experimental_title"-->
        <!--android:summary="@string/experimental_summary"-->
        <!--android:enabled="false"-->
        <!--android:defaultValue="0" />-->
    
    <Preference android:key="donateBTC"
        android:title="@string/donate_title"
        android:icon="@drawable/ic_btc_blue"
        android:summary="@string/donate_summary" />

    <Preference android:key="donateLTC"
        android:title="@string/donate_title_ltc"
        android:icon="@drawable/ic_ltc_blue"
        android:summary="@string/donate_summary" />

</PreferenceScreen>